partial rewrite based on better analysis of the problem domain and separation of the model and view layers